Starting with the navigation hamburger bar.

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -13,15 +13,36 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <title>BrewBox</title>
   </head>
-  <header>
-
-  </header>
-  <main>
+  <body>
+    <header class="header">
+      <div class="nav-box">
+        <input id="toggle" type="checkbox" />
+        <label for="toggle" class="hamburger">
+          <div class="top-bun"></div>
+          <div class="meat"></div>
+          <div class="bottom-bun"></div>
+        </label>
+        <div class="nav">
+          <div class="nav-wrapper">
+            <div class="links">
+              <ul>
+                <li></li>
+                <li><a href="">HOME</a></li>
+                <li><a href="">BREWS</a></li>
+                <li><a href="">CONTACT US</a></li>
+                <li><a href="">ABOUT US</a></li>
+                <li><a href="">LOGIN</a></li>
+              </ul>
+              <button>VIEW CART</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <main>
       <section class="home">
-        <img class="homebackground" src="../images/homelogo.jpg" />
+        <img class="homebackground" src="../images/2560Background.jpg" />
       </section>
-  </main>
-  <footer>
-
-  </footer>
+    </main>
+    <footer></footer>
+  </body>
 </html>
