Adjusted the navigation styles on toggle.

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -26,14 +26,13 @@
           <div class="nav-wrapper">
             <div class="links">
               <ul>
-                <li></li>
                 <li><a href="">HOME</a></li>
                 <li><a href="">BREWS</a></li>
                 <li><a href="">CONTACT US</a></li>
                 <li><a href="">ABOUT US</a></li>
                 <li><a href="">LOGIN</a></li>
+                <li><button class="btn">CART</button></li>
               </ul>
-              <button>VIEW CART</button>
             </div>
           </div>
         </div>
