Adjusted homepage background for proper positioning.

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -39,7 +39,7 @@
       </div>
     <main>
       <section class="home">
-        <img class="homebackground" src="../images/2560Background.jpg" />
+        <img class="homebackground" src="../images/homeBackground.png" />
       </section>
     </main>
     <footer></footer>
