Adjusted animation on sidebar to ease in the side edge on desktop view.

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css" />
     <title>BrewBox</title>
   </head>
@@ -39,6 +37,14 @@
       </div>
     <main>
       <section class="home">
+        <div class="title">
+          <h1 class="heroTitle">
+            BrewBox
+          </h1>
+        </div>
+        <div class="subTitle">
+          <p class="subHeroTitle">Brew life at home.</p>
+        </div>
         <img class="homebackground" src="../images/homeBackground.png" />
       </section>
     </main>
