Static homepage how I designed it in Figma.

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -37,6 +37,9 @@
       </div>
     <main>
       <section class="home">
+        <div>
+          <img class="homebackground" src="../images/homeBackground.png" />
+        </div>
         <div class="title">
           <h1 class="heroTitle">
             BrewBox
@@ -45,7 +48,10 @@
         <div class="subTitle">
           <p class="subHeroTitle">Brew life at home.</p>
         </div>
-        <img class="homebackground" src="../images/homeBackground.png" />
+        <div>
+          <img class="downarrow " src="../images/arrow_downward_FILL0_wght400_GRAD0_opsz48.png" alt="" srcset="">
+          <div class="explore">Explore</div>
+        </div>
       </section>
     </main>
     <footer></footer>
